--- a/style.css
+++ b/style.css
@@ -12,37 +12,6 @@ body {
   background-color: #000;
 }
 
-.progress-bar {
-  width: 100%;
-  background: #000;
-  height: 20px;
-  margin: 1rem 0;
-  border-radius: 10px;
-  overflow: hidden;
-  position: relative;
-}
-
-.progress {
-  background: #bd3692;
-  height: 100%;
-  width: 0;
-
-
-.progress-text {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #fff;
-  font-weight: bold;
-  pointer-events: none;
-
-}
-
 header {
   text-align: center;
   padding: 2rem 1rem;
@@ -51,7 +20,7 @@ header {
 
 header h1,
 header .subtitle {
-  color: #bd3692;
+  color: #FFB5E8;
 }
 
 header h1 {
