--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ header .subtitle {
 }
 
 #auth input {
+  width: 100%;
   background-color: #222;
   color: #fff;
 }
@@ -100,18 +101,7 @@ header .subtitle {
 #logout-btn {
   margin-top: 0.75rem;
   display: none;
-
   margin: 1rem 0;
-}
-
-#auth form {
-  display: inline-flex;
-  gap: 0.5rem;
-}
-
-#auth input {
-  padding: 0.25rem;
-
 }
 
 #progress-bar {
@@ -123,6 +113,7 @@ header .subtitle {
   color: #fff;
   font-weight: bold;
   line-height: 20px;
+  transition: width 0.3s ease;
 }
 
 nav .menu {
